--- a/src/Presentation/SmartStore.Web/Views/Catalog/RecentlyViewedProducts.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/RecentlyViewedProducts.cshtml
@@ -9,9 +9,9 @@
 @using SmartStore.Web.Models.Catalog;
 
 <div class="page recently-viewed-products-page">
-    <div class="page-title">
-        <h1 class="h3">@T("Products.RecentlyViewedProducts")</h1>
-    </div>
+	<div class="heading mb-4">
+		<h3 class="heading-title fs-h1">@T("Products.RecentlyViewedProducts")</h3>
+	</div>
 
     <div class="page-body">
         @if (Model.Items.Count > 0)
