Theming: better tags for homepage

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_misc.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_misc.scss
@@ -93,6 +93,11 @@ body.popup {
 .block-popular-blogtags li {
     display: inline;
 }
+.block-popular-tags {
+    li { font-size: 1.2rem; }
+    a { color: $gray; }
+}
+
 
 // menu
 .dropdown {
